# isohash

./: CMakeLists.txt  README.txt  bindings.cpp  experiment.py  main.cpp  main.h
Experimental Results/: directed_isomorphic.csv  directed_nonisomorphic.csv  overflow_undirected_isomorphic.csv  scaling_nonisomorphic.csv  scaling_nonisomorphic_nodehash.csv  undirected_isomorphic.csv  undirected_nonisomorphic.csv
